# algorithms

./: README.md  algorithms.cabal  playground.cabal  sieve-of-eratosthenes.cabal  stack.yaml
app/: Main.hs
src/: Eratosthenes.hs  Graphics.hs  List.hs  Math.hs  Primes.hs
