name:                algorithms
version:             0.1.0.0
synopsis:            Algorithm for finding all prime numbers up to any limit
description:         Don't use this, use a real lib instead
homepage:            https://github.com/githubuser/sieve#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Hakki
maintainer:          ahk@ahakki.xyz
copyright:           2016 Alexander Hakki
category:            Algorithms
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ahakki/sieve-of-eratosthenes
