name:                playground
version:             0.1.0.0
synopsis:            Just some werk
description:         Don't use this, use a real lib instead
homepage:            ahakki.xyz
license:             BSD3
license-file:        LICENSE
author:              Alexander Hakki
maintainer:          ahk@ahakki.xyz
copyright:           2016 Alexander Hakki
category:            toys
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Math
                     , List
                     , Graphics
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

Executable playground
  Main-Is:             Main.hs
  Hs-Source-Dirs:      app
  build-depends:       base >= 4.7 && < 5
                     , playground
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ahakki/playground
